@@ -1,3 +1,7 @@
+2007-10-31 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/all_relations.py: use collapse family
+	* src/Relationship.py: add collopse equal family
+
 2007-10-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/Calendar.py: added Peter Landgren's locale suggestions
 
